package hcmuaf.edu.vn.fit.course_service.entity;

import com.fasterxml.jackson.annotation.JsonIgnore;
import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import hcmuaf.edu.vn.fit.course_service.entity.enums.AssessmentType;
import jakarta.persistence.*;
import lombok.*;
import java.sql.Timestamp;
import java.util.List;

@Entity
@Table(name = "assessments")
@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Assessment {

    @Id
    @Column(name = "assessment_id", length = 50)
    private String assessmentId;

    @JsonIgnore
    @ToString.Exclude
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "offering_id")

    private CourseOffering courseOffering;


    @Column(name = "rubric_id", length = 50)
    private String rubricId;

    @Column(name = "assessment_name", length = 255)
    private String assessmentName;

    @Column(name = "assessment_type", length = 100)
    private String assessmentType;

    @Column(name = "weight")
    private Float weight;


    @Column(name = "description", columnDefinition = "TEXT")
    private String description;

    @Column(name = "file_url", length = 500)
    private String fileUrl;

    @Column(name = "start_time", nullable = false, updatable = false)
    @Builder.Default
    private Timestamp startTime = new Timestamp(System.currentTimeMillis());

    @Column(name = "end_time")
    private Timestamp endTime;
    @Column(name = "duration_minutes")
    private Integer durationMinutes;
    @Override
    public String toString() {
        return "Assessment{" +
                "assessmentId='" + assessmentId + '\'' +
                ", courseOffering=" + courseOffering +
                ", rubricId='" + rubricId + '\'' +
                ", assessmentName='" + assessmentName + '\'' +
                ", assessmentType='" + assessmentType + '\'' +
                ", weight=" + weight +
                ", description='" + description + '\'' +
                ", fileUrl='" + fileUrl + '\'' +
                ", startTime=" + startTime +
                ", endTime=" + endTime +
                '}';
    }
}